--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -4,14 +4,9 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
+  height: 100vh;
 
   font-weight: normal;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
 }
 
 @media (min-width: 1024px) {
